# mcp-server-ads

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/: demo.tape  trim_idle.py
src/mcp_server_ads/: __init__.py  __main__.py  client.py  config.py  errors.py  formatting.py  server.py
src/mcp_server_ads/prompts/: __init__.py  workflows.py
src/mcp_server_ads/resources/: __init__.py  fields.py  rate_limits.py  syntax.py
src/mcp_server_ads/tools/: __init__.py  citation_helper.py  export.py  libraries.py  metrics.py  network.py  objects.py  reference.py  resolver.py  search.py
tests/: conftest.py  test_client.py  test_config.py  test_formatting.py  test_integration.py  test_prompts.py  test_resources.py  test_tools_citation_helper.py  test_tools_export.py  test_tools_libraries.py  test_tools_metrics.py  test_tools_network.py  test_tools_objects.py  test_tools_reference.py  test_tools_resolver.py  test_tools_search.py
tests/fixtures/: author_network_response.json  citation_helper_response.json  export_response.json  libraries_response.json  library_detail_response.json  metrics_response.json  objects_response.json  paper_network_response.json  reference_response.txt  resolver_response.json  search_response.json
