[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-ads"
version = "0.1.0"
description = "MCP server for the NASA Astrophysics Data System (ADS) API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Chris Byrohl" }]
keywords = ["mcp", "nasa", "ads", "astrophysics", "astronomy", "citations", "literature", "bibtex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "fastmcp>=2.0,<4.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.scripts]
mcp-server-ads = "mcp_server_ads.server:main"

[project.urls]
Homepage = "https://github.com/cbyrohl/mcp-server-ads"
Issues = "https://github.com/cbyrohl/mcp-server-ads/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_ads"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: tests that hit the live ADS API (require ADS_API_TOKEN)"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
]
